ignore dumb files

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,3 @@
-<<<<<<< HEAD
-*.gem
-*.rbc
-.bundle
-.config
-.yardoc
-Gemfile.lock
-InstalledFiles
-_yardoc
-coverage
-doc/
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-*.bundle
-*.so
-*.o
-*.a
-mkmf.log
-=======
 nbproject/
 debug.log
 .DS_Store
@@ -37,4 +13,4 @@ test/profile/output/*
 coverage/*
 .flooignore
 .floo
->>>>>>> 39c26d444de3cb7923c36674683f086480c11ec0
+.idea/*
